Fixed and tested head localization

--- a/source/ExternalDLL/ExternalDLL/ExternalDLL.vcxproj
+++ b/source/ExternalDLL/ExternalDLL/ExternalDLL.vcxproj
@@ -75,6 +75,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Algorithm.h" />
+    <ClInclude Include="basetimer.h" />
     <ClInclude Include="DefaultExtraction.h" />
     <ClInclude Include="DefaultLocalization.h" />
     <ClInclude Include="DefaultPreProcessing.h" />
@@ -107,6 +108,7 @@
     <ClInclude Include="ValueGrid.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="basetimer.cpp" />
     <ClCompile Include="DefaultExtraction.cpp" />
     <ClCompile Include="DefaultLocalization.cpp" />
     <ClCompile Include="DefaultPreProcessing.cpp" />
